Bug 196686 - Iconview (Qt4 Model/View based) : Select multiple images with Ctrl + Mouse not working anymore in 1.0.0-beta1
Summary: Iconview (Qt4 Model/View based) : Select multiple images with Ctrl + Mouse no...
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Albums-IconView (other bugs)
Version First Reported In: 1.0.0
Platform: Gentoo Packages Unspecified
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-06-15 23:51 UTC by Ian Hubbertz
Modified: 2017-07-29 05:27 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ian Hubbertz 2009-06-15 23:51:36 UTC
Version:           1.0.0-beta1 (using KDE 4.2.4)
Installed from:    Gentoo Packages

In album view of 1.0.0-beta1 it is not possible anymore to select multiple images by pressing the Ctrl key and mouse clicks.

However, it is possible to use the + (or -) icons in the top left corner of the image.

The behaviour of digikam when clicking an imange with Ctrl key pressed while other images are still selected is quite strange: The clicked image is shown for a short time but then switched to the first selected image. Clicking again (on the shown image), brings you back to album view, but the first selected image is now deselected.
Comment 1 Marcel Wiesweg 2009-06-16 18:13:02 UTC
You are talking about a Ctrl+click on the thumbnail area? This selected in previous versions instead of previewing? I see that it should. Ok, that's a bug.
Clicking on the non-thumbnail area works for me.
Comment 2 Ian Hubbertz 2009-06-16 20:32:35 UTC
(In reply to comment #1)


> Clicking on the non-thumbnail area works for me.
For me, too.

But, what is also not working is selecting by dragging a "selection rectangle" around the images: This selects the images in the rectangle correctly, but deselects previous selected images regardless if CTRL is pressed or not.
Comment 3 Marcel Wiesweg 2009-06-26 16:35:25 UTC
SVN commit 987694 by mwiesweg:

Got enough of this: Port Qt's QListView code for setSelection and replace
home-brewn implementation.
In my tests it worked nicely.
This fixes the problems of "Weird behavior with Shift + Click" (any bug report?)
and the problem "Ctrl + rubberband selection deselects previous selection".

CCBUG: 196686

 M  +175 -126  kcategorizedview.cpp  
 M  +10 -0     kcategorizedview_p.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=987694
Comment 4 Marcel Wiesweg 2009-06-26 16:35:38 UTC
SVN commit 987695 by mwiesweg:

Ignore activation by click on thumbnail if the Ctrl or Shift modifiers are pressed.

BUG: 196686

 M  +7 -0      imagecategorizedview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=987695