Ignore activation by click on thumbnail if the Ctrl or Shift modifiers are pressed.

BUG: 196686

svn path=/trunk/extragear/graphics/digikam/; revision=987695